--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <meta name="apple-mobile-web-app-title" content="portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <title>portfolio</title>
   <link rel="manifest" href="manifest.json">
@@ -37,7 +37,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2959199899';
+    var serviceWorkerVersion = '231318081';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
